typos removed, comments added

--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -583,16 +583,16 @@
     "\n",
     "\\begin{align}\n",
     "k_\\text{last} = \\left[ k_{\\{v_k=0\\}} \\right] \n",
-    "= \\left[ \\pi \\, \\arctan\\left(\\dfrac{2\\sqrt{\\lambda}}{\\lambda-1}\\right)^{-1}\\right].\n",
+    "= \\left[ \\pi \\, \\arctan\\left(\\dfrac{2\\sqrt{\\lambda}}{\\lambda-1}\\right)^{-1}\\right],\n",
     "\\tag*{(30)}\n",
     "\\end{align}\n",
     "\n",
     "where the brackets denote $[x]=$ *round the decimals of $x$ to the nearest integer.*\n",
-    "Here we have finally found a way to relate the number of clacks to the mass-ration parameter $\\lambda$.\n",
-    "Notice that the initial velocity $V_0$ of the large block is irrelevant.\n",
-    "This expression also serves to distinguish between conditions *i* and *ii* simply by the way the rounding is performed: \n",
-    "- if the number in brackets is rounded up ($k_\\text{last} < k_{\\{v_k=0\\}}$), then condition *i* is valid\n",
-    "- if the number in brackets is rounded down ($k_\\text{last} > k_{\\{v_k=0\\}}$), then condition *ii* is valid\n",
+    "Here we have finally found a way to relate the number of clacks to the mass-ratio parameter $\\lambda$.\n",
+    "Notice that the magnitude of the initial velocity of the large block $|V_0|$ is irrelevant.\n",
+    "The result in eq. (30) also serves to distinguish between conditions *i* and *ii* simply by the way the rounding is performed: \n",
+    "- if the number in brackets is rounded up ($k_\\text{last} > k_{\\{v_k=0\\}}$), then condition *i* is valid\n",
+    "- if the number in brackets is rounded down ($k_\\text{last} < k_{\\{v_k=0\\}}$), then condition *ii* is valid\n",
     "- if the number in brackets is an integer ($k_\\text{last} = k_{\\{v_k=0\\}}$), then condition *i* is valid\n",
     "\n",
     "Using these results and eq. (16) we write the general form for the total number of clacks as\n",
@@ -604,7 +604,9 @@
     "-1 & \\text{if}\\; [\\cdots] \\text{ rounds the value down}\\\\\n",
     "\\;\\;0 & \\text{otherwise}\n",
     "\\end{array}\\right.. \\tag*{(31)}\n",
-    "\\end{align}\n"
+    "\\end{align}\n",
+    "\n",
+    "This the more general result for the numbers of clacks between the colliding blocks, including the clacks from reflections from the wall. Some particular examples are explicitly computed in the next section and a general formula is derived in Sec. 4.4."
    ]
   },
   {
@@ -624,7 +626,7 @@
     "N_\\text{clacks}(100^0) &= 2\\left[\\pi \\lim_{\\lambda\\to1} \\arctan\\left(\\dfrac{2\\sqrt{\\lambda}}{\\lambda-1}\\right)^{-1}\\right] + \\delta N \n",
     "= 2\\left[\\pi \\lim_{x\\to\\infty} \\arctan(x)^{-1} \\right] + \\delta N \\\\\n",
     "&= 2\\left[\\pi \\,\\left(\\frac{\\pi}{2}\\right)^{-1} \\right] + \\delta N\n",
-    "= 2\\big[2 \\big] + \\delta N \\qquad\\qquad\\leftarrow\\text{[...] does not round the value down: } \\delta N=-1 \\\\\n",
+    "= 2\\big[2 \\big] + \\delta N \\qquad\\qquad\\qquad\\qquad\\leftarrow\\text{[...] does not round the value down: } \\delta N=-1 \\\\\n",
     "&= 2(2) - 1 = 4 - 1 = 3\n",
     ". \\tag*{(32)}\n",
     "\\end{align}\n",
@@ -632,7 +634,7 @@
     "#### Case $d=2 \\;(\\lambda = 100)$\n",
     "\\begin{align}\n",
     "N_\\text{clacks}(100^1) &= 2\\left[\\pi \\arctan\\left(\\dfrac{20}{99}\\right)^{-1} \\right] + \\delta N \n",
-    "= 2\\big[15.77\\big] + \\delta N \\qquad\\leftarrow\\text{[...] does not round the value down: } \\delta N=-1 \\\\\n",
+    "= 2\\big[15.77\\big] + \\delta N \\qquad\\qquad\\leftarrow\\text{[...] does not round the value down: } \\delta N=-1 \\\\\n",
     "&= 2(16) - 1 = 31\n",
     ". \\tag*{(33)}\n",
     "\\end{align}\n",
@@ -640,7 +642,7 @@
     "#### Case $d=3 \\;(\\lambda = 100^2)$\n",
     "\\begin{align}\n",
     "N_\\text{clacks}(100^2) &= 2\\left[\\pi \\arctan\\left(\\dfrac{2\\times10^2}{10^4-1}\\right)^{-1} \\right] + \\delta N \n",
-    "= 2\\big[157.08\\big] + \\delta N \\qquad\\leftarrow\\text{[...] rounds the value down: } \\delta N=0 \\\\\n",
+    "= 2\\big[157.08\\big] + \\delta N \\qquad\\qquad\\leftarrow\\text{[...] rounds the value down: } \\delta N=0 \\\\\n",
     "&= 2(157) = 314\n",
     ". \\tag*{(34)}\n",
     "\\end{align}\n",
@@ -672,7 +674,7 @@
     "#### Case $d=7 \\;(\\lambda = 100^6)$\n",
     "\\begin{align}\n",
     "N_\\text{clacks}(100^6) &= 2\\left[\\pi \\arctan\\left(\\dfrac{2\\times10^6}{10^{12}-1}\\right)^{-1} \\right] + \\delta N \n",
-    "= 2\\big[1570796.33\\big] + \\delta N \\qquad\\leftarrow\\text{[...] rounds the value down: } \\delta N=0 \\\\\n",
+    "= 2\\big[1570796.33\\big] + \\delta N \\qquad\\qquad\\leftarrow\\text{[...] rounds the value down: } \\delta N=0 \\\\\n",
     "&= 2(1570796) - 1 = 3141592\n",
     ". \\tag*{(38)}\n",
     "\\end{align}"
@@ -685,8 +687,8 @@
     "### 4.4 Analytical approximation\n",
     "\n",
     "The results in Sec. 4.3 clearly show that eq. (31) properly generates the total number of clacks in agreement with the claim in Sec. 1 and the simulations in Sec. 3.\n",
-    "Now we proceed to generalize the result for arbitrarily more digits of $\\pi$, which is equivalent to $\\lambda=100^{d-1}\\gg1$.\n",
-    "In this case the denominator in the arctan function in eq. (31) can be approximated in the form $\\lambda-1\\approx\\lambda$, so the formula reduces to\n",
+    "Now we proceed to generalize the result for arbitrarily large $d$ digits of $\\pi$, which is equivalent to $\\lambda=100^{d-1}\\gg1$.\n",
+    "In this limit the denominator in the $\\arctan$ function in eq. (31) can be approximated in the form $\\lambda-1\\approx\\lambda$, so the formula reduces to\n",
     "\n",
     "\\begin{align}\n",
     "N_\\text{clacks}(\\lambda) \\approx 2\\left[ \\pi \\, \\lim_{\\lambda\\to\\infty}\\arctan\\left(\\dfrac{2}{\\sqrt{\\lambda}}\\right)^{-1}\\right] + \\delta N.\n",
@@ -700,7 +702,7 @@
     "\\tag*{(40)}\n",
     "\\end{align}\n",
     "\n",
-    "We can now use a series expansion of the arctan function $\\arctan(\\varepsilon) = \\varepsilon + \\mathcal(\\varepsilon^3)$ to obtain\n",
+    "We can now use the series expansion $\\arctan(\\varepsilon) = \\varepsilon + \\mathcal{O}(\\varepsilon^3)$ to obtain\n",
     "\n",
     "\\begin{align}\n",
     "N_\\text{clacks}(\\varepsilon) &\\approx 2\\left[ \\pi \\, \\varepsilon^{-1}\\right] + \\delta N \\\\\n",
@@ -889,10 +891,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.141592653589793, 1.0471975511965976)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.pi, np.pi/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
