--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -677,40 +677,47 @@
     "= 2\\big[1570796.33\\big] + \\delta N \\qquad\\qquad\\leftarrow\\text{[...] rounds the value down: } \\delta N=0 \\\\\n",
     "&= 2(1570796) - 1 = 3141592\n",
     ". \\tag*{(38)}\n",
-    "\\end{align}"
+    "\\end{align}\n",
+    "\n",
+    "All the worked examples clearly show that eq. (31) properly gives the expected results based on the claim in Sec. 1 and the numerical results of the simulations in Sec. 3.\n",
+    "For large values of $\\lambda$ the generation of digits of $\\pi$ can be written in a closed form, which is presented in the following section."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.4 Analytical approximation\n",
+    "### 4.4 Exact analytical expression\n",
     "\n",
     "The results in Sec. 4.3 clearly show that eq. (31) properly generates the total number of clacks in agreement with the claim in Sec. 1 and the simulations in Sec. 3.\n",
-    "Now we proceed to generalize the result for arbitrarily large $d$ digits of $\\pi$, which is equivalent to $\\lambda=100^{d-1}\\gg1$.\n",
-    "In this limit the denominator in the $\\arctan$ function in eq. (31) can be approximated in the form $\\lambda-1\\approx\\lambda$, so the formula reduces to\n",
+    "Now we proceed to generalize the result for arbitrary number $d>1$ of digits of $\\pi$, which is equivalent to $\\lambda=100^{d-1}\\gg1$.\n",
+    "Recall that the special case $d=1$ was proven to correctly produce the first digit of $\\pi$ in the previous section.\n",
+    "Let us consider the Taylor series of the function of $\\lambda$ in eq. (31) using the small parameter $1/\\lambda \\ll 1$:\n",
     "\n",
     "\\begin{align}\n",
-    "N_\\text{clacks}(\\lambda) \\approx 2\\left[ \\pi \\, \\lim_{\\lambda\\to\\infty}\\arctan\\left(\\dfrac{2}{\\sqrt{\\lambda}}\\right)^{-1}\\right] + \\delta N.\n",
+    "N_\\text{clacks}(\\lambda) \\approx 2\\left[ \\frac{\\pi \\sqrt\\lambda}{2} \\left( 1+ \\frac{1/\\lambda}{3} + \\mathcal{O}\\big((1/\\lambda)^2\\big) \\right)\\right] + \\delta N.\n",
     "\\tag*{(39)}\n",
     "\\end{align}\n",
     "\n",
-    "By defining a new variable $\\varepsilon = 2/\\sqrt{\\lambda}$ we get\n",
+    "The claim is that only the first term is relevant, so let us focus on the second term: since we want to consider $\\lambda=100^{d-1}$ we can write the second term in the sum as\n",
     "\n",
     "\\begin{align}\n",
-    "N_\\text{clacks}(\\varepsilon) \\approx 2\\left[ \\pi \\, \\lim_{\\varepsilon\\to0}\\arctan\\left(\\varepsilon\\right)^{-1}\\right] + \\delta N.\n",
+    "\\frac{1}{3 \\lambda} = \\frac{0.33}{100^{d-1}} = 0.\\underbrace{00\\cdots00}_{2d}33.\n",
     "\\tag*{(40)}\n",
     "\\end{align}\n",
     "\n",
-    "We can now use the series expansion $\\arctan(\\varepsilon) = \\varepsilon + \\mathcal{O}(\\varepsilon^3)$ to obtain\n",
+    "Since $d>1$ this correction will take a value of at most a fraction of a thousand; therefore, it cannot contribute to changes in the rounding of the overall factor $\\pi\\sqrt\\lambda/2$.\n",
+    "In the sum the terms of higher order in $1/\\lambda$ will contribute even less.\n",
+    "For this reason, even though we will keep only the first term series (39), the result after rounding this term is exact.\n",
+    "\n",
+    "We can now write\n",
     "\n",
     "\\begin{align}\n",
-    "N_\\text{clacks}(\\varepsilon) &\\approx 2\\left[ \\pi \\, \\varepsilon^{-1}\\right] + \\delta N \\\\\n",
-    "N_\\text{clacks}(\\lambda) &\\approx 2\\left[ \\pi \\, \\frac{\\sqrt\\lambda}{2}\\right] + \\delta N.\n",
+    "N_\\text{clacks}(\\lambda) &= 2\\left[ \\frac12 \\pi \\sqrt\\lambda \\right] + \\delta N.\n",
     "\\tag*{(41)}\n",
     "\\end{align}\n",
     "\n",
-    "Let us define\n",
+    "In order to analytically evaluate the rounding $[\\ldots]$ let us define\n",
     "\n",
     "\\begin{align}\n",
     "\\Omega = \\pi \\sqrt\\lambda,\n",
@@ -720,7 +727,7 @@
     "so that eq. (41) can be written simply as\n",
     "\n",
     "\\begin{align}\n",
-    "N_\\text{clacks}(\\lambda\\gg1) &\\approx 2\\left[ \\frac{\\Omega}{2}\\right] + \\delta N.\n",
+    "N_\\text{clacks}(\\lambda) &= 2\\left[ \\frac{\\Omega}{2}\\right] + \\delta N.\n",
     "\\tag*{(43)}\n",
     "\\end{align}\n",
     "\n",
@@ -891,10 +898,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 58,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -902,7 +907,7 @@
        "(3.141592653589793, 1.0471975511965976)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,6 +919,78 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -935,7 +1012,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
