--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -706,7 +706,7 @@
     "\\tag*{(40)}\n",
     "\\end{align}\n",
     "\n",
-    "Since $d>1$ this correction will take a value of at most a fraction of a thousand; therefore, it cannot contribute to changes in the rounding of the overall factor $\\pi\\sqrt\\lambda/2$.\n",
+    "Since $d>1$ this correction could at most modify the ten thousandths place of unity; therefore, it cannot contribute to changes in the rounding of the overall factor $\\pi\\sqrt\\lambda/2$.\n",
     "In the sum the terms of higher order in $1/\\lambda$ will contribute even less.\n",
     "For this reason, even though we will keep only the first term series (39), the result after rounding this term is exact.\n",
     "\n",
@@ -895,105 +895,6 @@
     "\n",
     "[3] Galperin, G., *Playing pool with π (the number π from a billiard point of view)*, Regular and Chaotic Dynamics, pp. 375-394, 2003 [[PDF](https://www.maths.tcd.ie/~lebed/Galperin.%20Playing%20pool%20with%20pi.pdf)]."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3.141592653589793, 1.0471975511965976)"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.pi, np.pi/3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
