extra clarifying comments

--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -541,6 +541,7 @@
     "### 4.2 The end of the process and the final-state conditions\n",
     "\n",
     "In Sec. 2.3 we found that there are two possibilities for the final state of the system, denoted conditions *i* and *ii* in eq. (16).\n",
+    "These conditions refer to whether the last clack is produced by a collision between the blocks (cond. *i*) or by the small block being reflected by the wall one last time (cond. *i*).\n",
     "Dividing by the final velocity of the large block $V_{k_\\text{last}}<0$ these conditions can be written as\n",
     "\n",
     "\\begin{align}\n",
@@ -606,7 +607,9 @@
     "\\end{array}\\right.. \\tag*{(31)}\n",
     "\\end{align}\n",
     "\n",
-    "This the more general result for the numbers of clacks between the colliding blocks, including the clacks from reflections from the wall. Some particular examples are explicitly computed in the next section and a general formula is derived in Sec. 4.4."
+    "This the more general result for the numbers of clacks between the colliding blocks, including the clacks from reflections from the wall. \n",
+    "The two possible values that the term $\\delta N$ can take refer to whether the last clack in the process is produced by a collision between the blocks ($\\delta N=0$) or by the small block being reflected by the wall one last time ($\\delta N=0$).\n",
+    "Some particular examples are explicitly computed in the next section and a general formula is derived in Sec. 4.4."
    ]
   },
   {
@@ -842,7 +845,7 @@
     "We can now replace results (50) and (55) into eq. (43):\n",
     "\n",
     "\\begin{align}\n",
-    "N_\\text{clacks}(\\lambda\\gg1) &\\approx 2\\left[ \\frac{\\Omega}{2}\\right] + \\delta N\n",
+    "N_\\text{clacks}(\\lambda) &= 2\\left[ \\frac{\\Omega}{2}\\right] + \\delta N\n",
     "= \\left\\{\\begin{array}{lll} \n",
     "\\text{int}(\\Omega) & \\text{if}\\; \\text{int}(\\Omega) \\text{ is even } (\\delta N=0)\\\\\n",
     "\\big(\\text{int}(\\Omega)+1\\big)-1 & \\text{if}\\; \\text{int}(\\Omega) \\text{ is odd } (\\delta N=-1)\n",
@@ -853,14 +856,14 @@
     "This result shows that independent on whether $\\text{int}(\\Omega)$ is even or odd, the general expression for the total number of clacks is given by\n",
     "\n",
     "\\begin{align}\n",
-    "N_\\text{clacks}(\\lambda\\gg1) &= \\text{int}(\\Omega) = \\text{int}\\left(\\pi \\sqrt\\lambda\\right).\n",
+    "N_\\text{clacks}(\\lambda) &= \\text{int}(\\Omega) = \\text{int}\\left(\\pi \\sqrt\\lambda\\right).\n",
     "\\tag*{(57)}\n",
     "\\end{align}\n",
     "\n",
     "We can now use the general form for the mass-ratio in the claim $\\lambda=100^{d-1}$, from where we find that the total number of clacks is\n",
     "\n",
     "\\begin{align}\n",
-    "N_\\text{clacks}(\\lambda\\gg1) = \\text{int}\\left(\\pi 10^{d-1}\\right),\n",
+    "N_\\text{clacks}(\\lambda) = \\text{int}\\left(\\pi 10^{d-1}\\right),\n",
     "\\tag*{(58)}\n",
     "\\end{align}\n",
     "\n",
