extra clarifying comments

--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -608,7 +608,7 @@
     "\\end{align}\n",
     "\n",
     "This the more general result for the numbers of clacks between the colliding blocks, including the clacks from reflections from the wall. \n",
-    "The two possible values that the term $\\delta N$ can take refer to whether the last clack in the process is produced by a collision between the blocks ($\\delta N=0$) or by the small block being reflected by the wall one last time ($\\delta N=0$).\n",
+    "The two possible values that the term $\\delta N$ can take refer to whether the last clack in the process is produced by a collision between the blocks ($\\delta N=-1$) or by the small block being reflected by the wall one last time ($\\delta N=0$).\n",
     "Some particular examples are explicitly computed in the next section and a general formula is derived in Sec. 4.4."
    ]
   },
@@ -864,10 +864,13 @@
     "\n",
     "\\begin{align}\n",
     "N_\\text{clacks}(\\lambda) = \\text{int}\\left(\\pi 10^{d-1}\\right),\n",
+    "\\qquad \\lambda=100^{d-1}.\n",
     "\\tag*{(58)}\n",
     "\\end{align}\n",
     "\n",
-    "which corresponds to a $d$-digit integer whose digits are given by the first $d$ digits of $\\pi$."
+    "This expression corresponds to a $d$-digit integer whose digits are given by the first $d$ digits of $\\pi$.\n",
+    "Even though in this section we have used $d>$, we already showed in the first case of Sec. 4.2 that the result (58) is also valid for $d=1$.\n",
+    "Moreover, the resuls obtained here is independent of the final configuration state of the system as we have explicitly considered both cases: when the last clack is produced by a collision between the blocks and when the small block is reflected by the wall one last time."
    ]
   },
   {
