--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -869,8 +869,8 @@
     "\\end{align}\n",
     "\n",
     "This expression corresponds to a $d$-digit integer whose digits are given by the first $d$ digits of $\\pi$.\n",
-    "Even though in this section we have used $d>$, we already showed in the first case of Sec. 4.2 that the result (58) is also valid for $d=1$.\n",
-    "Moreover, the resuls obtained here is independent of the final configuration state of the system as we have explicitly considered both cases: when the last clack is produced by a collision between the blocks and when the small block is reflected by the wall one last time."
+    "Even though in this section we have used $d>1$, we already showed in the first case of Sec. 4.2 that the result (58) is also valid for $d=1$.\n",
+    "Moreover, the result obtained here is independent of the final configuration state of the system as we have explicitly considered both cases: when the last clack is produced by a collision between the blocks and when the small block is reflected by the wall one last time."
    ]
   },
   {
