--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -82,7 +82,7 @@
     "mv_\\text{before} &=& mv_\\text{after}; \\tag*{(3)}\\\\\n",
     "\\end{eqnarray}\n",
     "\n",
-    "where contributions from the large block are ignored as its does participate in the reflection process.\n",
+    "where contributions from the large block are not explicitly included because its momentum and energy remain unchanged in the reflection process.\n",
     "This system of equations has two solutions: $v_\\text{after} = v_\\text{before}$ and $v_\\text{after} = -v_\\text{before}$. The first solution indicates that the block moves across the wall, so although mathematically valid this is a unphysical solution. The second solution shows that the block bounces against the wall and after the reflection will move with the same speed in the opposite direction. This shows that the role played by the wall in the dynamics of the problem is by reversing the sign of the small block's velocity before the next collision."
    ]
   },
@@ -97,6 +97,9 @@
     "MV_k - mv_k &= MV_{k+1} + mv_{k+1}. \\tag*{(5)}\\\\\n",
     "\\end{align*}\n",
     "\n",
+    "Notice that no assumptions have been made about the sign of any velocity.\n",
+    "Except for the initial condition, we do not want to force any block to move in any particular direction.\n",
+    "This information is fully contained in the solutions of the system of equations.\n",
     "The negative sign in front of $v_k$ indicates the direction of motion of this block is reversed between collisions, this is the action of the wall as proven above.\n",
     "This sign guarantees that all the information of the problem, including the reflection in the wall, is contained in the system of equations. \n",
     "The only exception is for the first collision (as there is no reflection before the first collision); however, $v_0=0$ so the sign will not affect the result and the equations are still valid.\n",
@@ -175,7 +178,7 @@
     "\n",
     "Mathematically, values for $k>2$ are perfectly valid; nevertheless, physically the process ends after the second collision because the blocks never collide again. \n",
     "\n",
-    "### 2.3 The end of the process\n",
+    "### 2.3 Conditions for the end of the process\n",
     "\n",
     "One of the key features of this problem is the identification of the necessary conditions for the process to end.\n",
     "We introduce here the notation $k_\\text{last}$ to denote the value of $k$ after which the process ends.\n",
@@ -201,7 +204,8 @@
     "\\end{align}\n",
     "\n",
     "In both cases the process ends with $k_\\text{last}=k+1$. \n",
-    "These conditions will turn out to be critical in the simulation presented in Sec. 2 as well as the (for now) misterious relation between the total number of clacks $N_\\text{clacks}$ and certain number of digits of $\\pi$, which is discussed in Sec. 3."
+    "These conditions will turn out to be critical in the simulation presented in Sec. 3 as well as the (for now) misterious relation between the total number of clacks $N_\\text{clacks}$ and certain number of digits of $\\pi$.\n",
+    "In fact, the analytical result obtained in Sec. 4 directly depends on the correct interpretation of these conditions."
    ]
   },
   {
