extra clarifying comments

--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -713,9 +713,9 @@
     "\\tag*{(40)}\n",
     "\\end{align}\n",
     "\n",
-    "Since $d>1$ this correction could at most modify the ten thousandths place of unity; therefore, it cannot contribute to changes in the rounding of the overall factor $\\pi\\sqrt\\lambda/2$.\n",
-    "In the sum the terms of higher order in $1/\\lambda$ will contribute even less.\n",
-    "For this reason, even though we will keep only the first term series (39), the result after rounding this term is exact.\n",
+    "Since $d>1$ this correction could at most modify the ten thousandths place of the first term of the series in eq. (39); therefore, it cannot contribute to changes in the rounding of the overall factor $\\pi\\sqrt\\lambda/2$.\n",
+    "Clearly the terms of higher order in $1/\\lambda$ will contribute even less.\n",
+    "For this reason, even though we will keep only the first term series (39), the final result after rounding this term is exact and not just an approximation.\n",
     "\n",
     "We can now write\n",
     "\n",
