--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -5,7 +5,11 @@
    "metadata": {},
    "source": [
     "# Digits of π from colliding blocks\n",
-    "[Jorge S. Diaz](https://github.com/jsdiazpo) (20 Jan. 2019)\n",
+    "[Jorge S. Diaz](https://github.com/jsdiazpo) \n",
+    "\n",
+    "20 Jan. 2019\n",
+    "\n",
+    "(full notebook on [GitHub](https://github.com/jsdiazpo/Pi-from-Colliding-Blocks))\n",
     "\n",
     "## 1. Introduction\n",
     "\n",
